Organize imports Generics